--- a/sr.entityset.core/build.properties
+++ b/sr.entityset.core/build.properties
@@ -2,6 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/glazedlists-1.8.0_java15.jar,\
-               lib/DdlUtils-1.0.jar
+               lib/DdlUtils-1.0.jar,\
+               lib/glazedlists_java15-1.9.0.jar
 src.excludes = test/
